# mq-basic-hex-fire-sim

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.ps1  index.html  rename.ps1  run.ps1  setup.ps1
src/: color_temperature.rs  hex_logic.rs  hex_matrix.rs  main.rs
web_res/: mq-basic-hex-fire-sim.js  mq-basic-hex-fire-sim.wasm
